feat: add vtypes for every registry + much better taggable support